# NIKIUID

./: .gitignore  CONTRIBUTING.md  README.md  __init__.py  pyproject.toml  ruff.toml
NIKIUID/: __init__.py  version.py
NIKIUID/niki_calendar/: __init__.py
NIKIUID/niki_card/: __init__.py
NIKIUID/niki_config/: __init__.py  config_default.py  niki_config.py  prefix.py
NIKIUID/niki_help/: __init__.py  get_help.py  help.json
NIKIUID/niki_login/: __init__.py  login_router.py  login_service.py
NIKIUID/niki_refresh/: __init__.py
NIKIUID/niki_stamina/: __init__.py
NIKIUID/templates/: done.html  login.html  niki_journal.html  stamina.html  wardrobe.html
NIKIUID/tests/: conftest.py  test_crypto.py  test_draw_num_service.py  test_stamina_calc.py  test_storage_security.py  test_suit_parser.py
NIKIUID/utils/: __init__.py  cache.py  constants.py  encoding.py  migrate.py  models.py  msgs.py  parser.py  render_image.py  render_journal_card.py  render_wardrobe_card.py  session.py  storage_assets.py  storage_cache.py  suit_parser.py  utils.py
NIKIUID/utils/auth/: __init__.py  crypto.py  passport.py
NIKIUID/utils/database/: __init__.py
NIKIUID/utils/resource/: RESOURCE_PATH.py
NIKIUID/utils/services/: __init__.py  draw_num_service.py  journal_service.py  refresh_service.py  resonance_service.py  stamina_service.py  stats_service.py
