[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "NIKIUID"
version = "1.0.0"
description = "无限暖暖插件 - 奇想手账、共鸣衣橱、体力查询、日历"
authors = [{ name = "Anyuluo" }]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=2.21.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["NIKIUID/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pyright]
include = ["NIKIUID"]
venvPath = "../../.."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
